5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1649_2445.log
== TEST (2019-04-11 17:40:29) 
-- CODE:
c = float(input("temperatura em celsius:"))
f = float(input("fairy:")) 
k = (5/9)*(f-32)
print(k)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    c = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:10:11) 
-- CODE:
	escolha = input("escolha, C or F:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32 #celcius pra faire sahushhsu
if escolha == "C":
	print(round(C2,2))
else:
	print(round(c1,2))
-- ERROR:
File "XXXX", line 1
    escolha = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:10:16) 
-- CODE:
escolha = input("escolha, C or F:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32 #celcius pra faire sahushhsu
if escolha == "C":
	print(round(C2,2))
else:
	print(round(c1,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:10:20) 
-- CODE:
escolha = input("escolha, C or F:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32 #celcius pra faire sahushhsu
if escolha == "C":
	print(round(C2,2))
else:
	print(round(c1,2))
-- EXECUTION TIME:
0.15059
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:

-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:10:56) 
-- CODE:
escolha = input("escolha, C or F:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "C":
	print(round(C2,2))
else:
	print(round(C1,2))
-- EXECUTION TIME:
0.16276
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
